# mesh

./: CMakeLists.txt  README.md
.githooks/: pre-commit
cmake/: gpfConfig.cmake.in
include/gpf/: detail.hpp  handles.hpp  ids.hpp  manifold_mesh.hpp  mesh.hpp  property.hpp  surface_mesh.hpp  utils.hpp
include/mesh1/: detail.hpp  handles.hpp  ids.hpp  manifold_mesh.hpp  mesh1.hpp  property.hpp  surface_mesh.hpp
tests/: main.cpp  test_manifold_mesh.cpp  test_property.cpp  test_surface_mesh.cpp
